# ml_emb

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data_preprocessing/: CMakeLists.txt  fft.c  fft.h  fft_demo.c  quantization.c  quantization.h  statistic.c  statistic.h
dataset_collection_application/: CMakeLists.txt  README.md  lab_0_1.cpp
dataset_collection_application/icm20948/: icm20948.c  icm20948.h
deployment/: CMakeLists.txt  arena_size_test.cpp  bestcnn.tflite  inference_test.cpp  main.cpp  model_data.cc
deployment/lab_5/: CMakeLists.txt  arena_size_test.cpp
deployment/lab_5/_python_scripts/: quantize.py
deployment/lab_5/lib/font/: fonts.h
deployment/lab_5/lib/lcd/: CMakeLists.txt  LCD_Driver.h  LCD_GUI.h  LCD_Touch.c
deployment/lab_5/models/: CMakeLists.txt  mnist_model_data.cpp
deployment/lab_5/src/: inference.h  model.h  model_settings.cpp
deployment/lib/config/: DEV_Config.c  DEV_Config.h
deployment/lib/lcd/: LCD_Touch.c  LCD_Touch.h
deployment/models/: CMakeLists.txt  finalmodel.tflite  mnist_image_data.cpp  model_data.cc  model_data.h
deployment/src/: CMakeLists.txt  inference.cpp  mnist_image_data.h  mnist_model_data.h  model.cpp  model.h  model_data.h  model_settings.cpp  model_settings.h
gesture_recog/: augmentation.py  benchmark_networks.py  convert.py  data_loader.py  inference.py  main.py  nn_def.py  old_pipeline.py  performance.ipynb  plot_comparison.py  plot_gestures.py  preprocess_recordings.py  requirements.txt  train_cnn_all_datasets.py
gesture_recog/chosen_models/: onedcnn_085.keras
gesture_recog/chosen_models/bestcnn/: fingerprint.pb  saved_model.pb
gesture_recog/chosen_models/finalmodel/: fingerprint.pb
gesture_recog/dataset_magic_wand/: readme.md
gesture_recog/dataset_magic_wand/negative/: person0.txt  person1.txt  person2.txt  person3.txt  person4.txt  person5.txt  person6.txt  person7.txt
gesture_recog/dataset_magic_wand/ring/: person0.txt  person1.txt  person2.txt  person3.txt  person4.txt  person5.txt  person6.txt  person7.txt
gesture_recog/dataset_magic_wand/slope/: person0.txt  person1.txt  person2.txt  person3.txt  (+4 more)
gesture_recog/deployment_models/: combindedcnn.tflite  info.md
gesture_recog/gan/: compare_gan_vs_real.py  gan_test.py  gan_train_wgan_gp.py  metrics_gan_cnn.json  run_gan_categories.py  run_gan_inference.py
gesture_recog/model_definitions/: agent.md  bilstm.py  cnn.py  deep_cnn.py  feature_classifier.py  nn_def.py  one_d_cnn.py
gesture_recog/util/: augmentation.py  benchmark_networks.py  data_loader.py  feature_extraction.py  inference.py  plot_comparison.py
host_data_processing/: TRAJECTORY_FIX.md  comparison_visual.py  plot.py  quantization_analysis.py  test_analysis.sh
imu_data_logger/: CMakeLists.txt  main.cpp
nn_python/: comfort_dataset.csv  datagen.py  dnn_lib.py  envSutisfaction.py
(+197 files in other folders)
